@startuml

title __TESTGAME's Class Diagram__\n

  namespace games.TestGame {
    class games.TestGame.GridBagLayoutDemo {
        {static} ~ RIGHT_TO_LEFT : boolean
        {static} ~ shouldFill : boolean
        {static} ~ shouldWeightX : boolean
        {static} + addComponentsToPane()
        {static} + main()
        {static} - createAndShowGUI()
    }
  }
  

  namespace games.TestGame {
    class games.TestGame.GridBagLayoutExample {
        + GridBagLayoutExample()
        {static} + main()
    }
  }
  

  namespace games.TestGame {
    class games.TestGame.ProceduralGeneration {
        + createArray()
        + createRoom()
        + createRooms()
        + printArray()
    }
  }
  

  namespace games.TestGame {
    class games.TestGame.ShittyGame {
        {static} - p : PuppetMaster
        + ShittyGame()
        + keyPressed()
        {static} + main()
        + mouseClicked()
        + mouseDragged()
        + mouseMoved()
        + mousePressed()
        + mouseReleased()
        + mouseWheelMoved()
        + update()
        - changeToBoardView()
        - changeToMenuView()
    }
  }
  

  namespace games.TestGame {
    class games.TestGame.SimpleAudioPlayer {
        ~ audioInputStream : AudioInputStream
        ~ clip : Clip
        ~ currentFrame : Long
        {static} ~ filePath : String
        ~ status : String
        + SimpleAudioPlayer()
        + jump()
        {static} + main()
        + pause()
        + play()
        + resetAudioStream()
        + restart()
        + resumeAudio()
        + stop()
        - gotoChoice()
    }
  }
  

  namespace games.TestGame {
    class games.TestGame.map {
        ~ array : int[][]
        ~ walls : String
        + getBoard()
        + map()
    }
  }
  

  games.TestGame.GridBagLayoutExample -up-|> javax.swing.JFrame
  games.TestGame.ShittyGame -up-|> engine.PuppetMaster
  games.TestGame.ShittyGame o-- engine.Tile : click
  games.TestGame.ShittyGame o-- engine.TableTop : tb
  games.TestGame.ShittyGame o-- engine.Graphics.BoardView : bv
  games.TestGame.ShittyGame o-- engine.Graphics.MenuView : mv
  games.TestGame.map o-- engine.tools.TextureHandler : th


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
